maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^WallFollowerMaze:5: warning: enclosing method wall has result type Unit: return value discarded
    return true
    ^WallFollowerMaze:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^WallFollowerMaze:8: warning: enclosing method wall has result type Unit: return value discarded
    return false
    ^WallFollowerMaze:13: error: value && is not a member of Unit
  while (wall() && !estSurBiscuit){
                ^